Fix missing nav menu toggle on small screens

--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -212,7 +212,7 @@
     height: $nav-toggle-height;
     border: 0;
     outline: none;
-    background-color: transparent;
+    // background-color: transparent;
     cursor: pointer;
   }
 
